# TriHRCBot

./: README.md
src/interface_msgs/: CMakeLists.txt  package.xml
src/interface_msgs/msg/: ClassificationData.msg  ConvertedDatapoint.msg  InteractionData.msg  RobotPerformance.msg
src/my_ur_launch/: CMakeLists.txt  package.xml
src/networks/: data_instance.py  performance_For_confusions.csv  performance_Time_performances.csv  plot_confusion.py
src/networks/network_weights/: rnn250rnn150e200dr25_3_5_out_no_RR_2_right_weights_097.json  rnn250rnn150e200dr25_3_5_out_no_RR_2_right_weights_097.tflite  rnn250rnn150e200dr25_3_5_out_no_RR_2_right_weights_097_weights.h5
src/networks/network_weights/rnn250rnn150e200dr25_3_5_out_no_RR_2_right_weights_097/: keras_metadata.pb  saved_model.pb
src/networks/network_weights/rnn250rnn150e200dr25_3_5_out_no_RR_2_right_weights_097/variables/: variables.data-00000-of-00001  variables.index
src/non_dyadic_ai/: package.xml  setup.cfg  setup.py
src/non_dyadic_ai/launch/: non_dyadic_ai.launch.py
src/non_dyadic_ai/non_dyadic_ai/: classifier.py  full_compute_pose.py  old_compute_pose.py  partial_compute_pose.py
src/robotic_system/: CMakeLists.txt  package.xml
src/robotic_system/launch/: A_final_study.launch.py  B_final_study.launch.py  C_final_study.launch.py  demo_ur_parameters.launch.py  joint_activity_classifier.launch.py  moveit_controller.launch.py  spawn_object_frames.launch.py  ur_parameters.launch.py  user_study_final.launch.py
src/robotic_system/src/: interaction_data_converter.cpp  mediated_pose_planner copy.cpp  mediated_pose_planner.cpp  move_to_position.cpp  moveit_controller.cpp  no_pose_calculator.cpp  produce_sound.cpp  skeleton_converter.cpp  store_datapoint.cpp  test_transitions.cpp  transform_broadcaster.cpp
